--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://ramyaselvaraj817.github.io/Performance",
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
